--- a/estilos.css
+++ b/estilos.css
@@ -42,7 +42,6 @@ button{
  border-radius: 5px;
   padding: 6px 30px;
   margin-left: -5px;
-  height: 13%;
 }
 
 .nav{
@@ -108,3 +107,22 @@ margin: 100px auto;
 a:link, a:visited, a:active {
   text-decoration:none;
   }
+
+  .features{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 330px);
+    background-color: #025157;
+    padding: 50px 10px;
+  }
+
+
+ .feature-card{
+  margin-bottom: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
+  background-color: #fff;
+  border: 1px solid #dadada;
+  border-radius: 5px;
+
+ }
